@@ -1,3 +1,5 @@
 displayName = N Terraria Utilities
 author = Nakano15
-version = 0.1.0.1
+version = 0.1.0.2
+hideResources = true
+includeSource = false
